<resources>
    <string name="app_name">FinalProject</string>
    <string name="StartLogo">TODO</string>
    <string name="everything_you_need_to_stay_in_shape">Everything You Need To Stay In Shape!</string>
    <string name="enter">Enter</string>
    <string name="TDEE">Button</string>
    <string name="BMR">Button</string>
    <string name="BFP">Button</string>
    <string name="Calorie">Button</string>
    <string name="BMI">Button</string>
    <string name="IdealWeight">Button</string>
    <string name="tdee">TDEE</string>
    <string name="bmr222">BMR</string>
    <string name="bodyfat">BodyFat %</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="bmi2">BMI</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="Menu">TODO</string>
    <string name="close">Close</string>
    <string name="textview">TextView</string>
    <string name="MenuButton">TODO</string>
    <string name="height">Height:</string>
    <string name="weight2">Weight:</string>
    <string name="gender22">Gender:</string>
    <string name="age223">Age:</string>
    <string name="male1">Male</string>
    <string name="female1">Female</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_enter_the_following">Please Enter The Following:</string>
    <string name="bmi">BMI</string>
    <string name="calculate_for_me">Calculate For Me</string>
    <string name="body_mass_index">(Body Mass Index)</string>
    <string name="use_different_values">Use Different Values</string>
    <string name="weight">Weight:</string>
    <string name="height2">Height:</string>
    <string name="InfoBMI">TODO</string>
    <string name="underweight_18_5"><![CDATA[underweight = < 18.5]]></string>
    <string name="bmi_categories">BMI Categories:</string>
    <string name="normal_weight_18_5_24_9">Normal weight = 18.5–24.9</string>
    <string name="overweight_25_29_9">Overweight = 25–29.9</string>
    <string name="obesity_bmi_of_30_or_greater">Obesity = BMI of 30 or greater</string>
    <string name="basal_metabolic_rate">Basal Metabolic Rate</string>
    <string name="bmr">BMR</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="kg2">(kg)</string>
    <string name="cm2">(cm)</string>
    <string name="calculate2">Calculate</string>
    <string name="kg">(kg)</string>
    <string name="cm">(cm)</string>
    <string name="calculate">Calculate</string>
    <string name="activity_level">Activity Level:</string>
    <string name="tdee2">TDEE</string>
    <string name="total_daily_energy_expenditure">Total Daily Energy Expenditure</string>
    <string name="for_fat_loss_you_need_to_eat_less_than_your_maintenance_tdee_by_300_500_calories">For Fat loss, You need to eat less than your Maintenance TDEE by 300-500 Calories</string>
    <string name="for_muscle_gain_you_need_to_eat_300_500_calories_more_than_your_maintenance_tdee_resistance_training_at_least_3_times_a_week">For Muscle Gain You need to eat 300-500 Calories more than your Maintenance TDEE + Resistance Training at least 3 times a week</string>


</resources>