<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C87B1"
    android:orientation="vertical"
    tools:context=".bmiActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/BMI"
        android:layout_alignTop="@id/BMI"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/InfoBMI"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/CalculateForMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_alignTop="@+id/BMI"
        android:text="@string/calculate_for_me" />

    <TextView
        android:id="@+id/BodyMassIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/BMI"
        android:layout_alignTop="@id/BMI"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-56dp"
        android:layout_marginTop="47dp"
        android:text="@string/body_mass_index"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/UseOtherValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/BMI"
        android:text="@string/use_different_values" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="210dp"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/WeightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/weight"
            android:textColor="#000000"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/HeightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/height2"
            android:textColor="#000000"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/WeightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="-90dp"
            android:ems="10"
            android:hint="@string/kg"

            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/HeightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:ems="10"
            android:hint="@string/cm"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#000000" />

        <Button
            android:id="@+id/Calc_Button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/calculate"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/BMI_Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/BMI_Categories"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:background="#0827E4"
        android:text="@string/normal_weight_18_5_24_9"
        android:textColor="#00F30A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/BMI_Categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:text="@string/bmi_categories"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/BMI_Under"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/BMI_Categories"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:background="#0827E4"
        android:text="@string/underweight_18_5"
        android:textColor="#FDD835"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/BMI_Obesity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/BMI_Categories"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:background="#0827E4"
        android:text="@string/obesity_bmi_of_30_or_greater"
        android:textColor="#FF0000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/YourBMI"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_alignStart="@id/BMI_Obesity"
        android:layout_alignTop="@id/BMI_Obesity"
        android:layout_marginStart="1dp"
        android:layout_marginTop="37dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/BMI_Over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/BMI_Categories"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:background="#0827E4"
        android:text="@string/overweight_25_29_9"
        android:textColor="#FF511A"
        android:textSize="18sp" />


</RelativeLayout>