<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C87B1"
    android:orientation="vertical"
    tools:context=".bmiActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/IdealWeight"
        android:layout_alignTop="@id/IdealWeight"
        android:layout_marginStart="180dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/InfoBMI"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/IdealWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="Ideal Weight"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/CalculateForMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/IdealWeight"
        android:layout_marginStart="30dp"
        android:layout_marginTop="117dp"
        android:text="@string/calculate_for_me" />

    <TextView
        android:id="@+id/WhatIsThePerfectWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/IdealWeight"
        android:layout_alignTop="@id/IdealWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-56dp"
        android:layout_marginTop="47dp"
        android:text="What's Your Perfect Weight?"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/UseOtherValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/CalculateForMe"
        android:text="@string/use_different_values" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="210dp"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/HeightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/height2"
            android:textColor="#000000"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/GenderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="28sp" />

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/GenderSegmented"
            android:layout_width="134dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="-25dp"
            android:orientation="horizontal"
            app:sc_border_width="2dp"
            app:sc_checked_text_color="#FFFFFF"
            app:sc_corner_radius="10dp"
            app:sc_tint_color="#1022CD">


            <RadioButton
                android:id="@+id/SegmentedButton1"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/SegmentedButton2"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <EditText
            android:id="@+id/HeightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="-85dp"
            android:ems="10"
            android:hint="@string/cm"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#000000" />

        <Button
            android:id="@+id/Other_Calc_Button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:text="@string/calculate"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/YourIdealWeight"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="450dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="28sp" />




</RelativeLayout>