<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C87B1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/StartLogo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/everything_you_need_to_stay_in_shape"
        android:textAlignment="center"
        android:textColor="#FB8C00"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/welcomeTV"
        android:layout_marginTop="100dp"
        android:layout_marginStart="150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enter" />

</RelativeLayout>